fixed missing border radius on some elements and completed header for desktop view

--- a/main_mobile.css
+++ b/main_mobile.css
@@ -4,37 +4,42 @@ html {
     color: white;
 }
 
-body { 
+body {
+    width: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
     margin: 0px;
 }
 
-header {
+header, .header_logoText_container {
     display: flex;
-    align-items: flex-end;
+    align-items: flex-start;
     box-sizing: border-box;
-    width: 100%;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    background-color: #011827;
-    font-size: 0.5rem;
+    width: 100%;    
+    background-color: #011827;    
 }
 
 .header_nav {
     display: none;
 }
 
+
 .header_esc_logo {
-    padding-left: 20px;
-    width: 26%;
+    margin-left: 27px;
+    margin-top: 26px;
+    margin-bottom: 36px;
+    width: 128px;
+    height: 82px;
 }
 
 .header_text {
-    padding-left: 20px;
-    flex-direction: row;
-    width: 20%;
+    width: 100%;
+    font-size: 24px;
+    padding-left: 13px;
+    margin-top: 25px;
+    
+    flex-direction: column;
     
 }
 
@@ -113,6 +118,7 @@ header {
 }
 
 .topHalf_tiles_wrapper {
+    max-width: 100%;
     display: flex;
     flex-wrap: nowrap;
     overflow-x: auto;
@@ -129,7 +135,7 @@ header {
     margin-left: 20px;
     margin-right: 10px;
     overflow: hidden;
-    border-radius: 5px;
+    border-radius: 8px;
     box-shadow: 0px 0px 5px 2px #b6bdb5; 
     color: black;
     font-size: 28px;
@@ -264,7 +270,8 @@ header {
     background-color: #e3170a;
     padding: 19px 52px 19px 52px;
     margin-left: 20px;
-    margin-top: 25px;   
+    margin-top: 25px;
+    border-radius: 4px;   
 }
 
 .bottomHalf_seeAllChallenges {
@@ -277,6 +284,7 @@ header {
     padding: 19px 56px 19px 56px;
     margin-left: 20px;
     margin-top: 25px;
+    border-radius: 4px;
 }
 
 footer {
